# BiomeMaker

./: CMakeLists.txt  README.md  main.cpp  run.bat
data/worldNames/: names.txt
src/Constants/: GraphicsConst.h  TilemapConst.h  WorldConst.h
src/Core/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  Renderer.h  SceneManager.cpp  SceneManager.h
src/Core/GameLoop/: Game.cpp  Game.h  SceneManager.cpp  SceneManager.h
src/Core/Render/: AssetManager.cpp  AssetManager.h  Renderer.cpp  Renderer.h
src/Core/World/: Biome.h  Chunk.h  Object.h  World.cpp  World.h  WorldCreator.cpp  WorldCreator.h  WorldSelector.cpp  WorldSelector.h
src/Entities/: BuffSystem.cpp  BuffSystem.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Entity.h  Player.cpp  Player.h
src/Items/: Item.h  ItemRegister.cpp  ItemRegister.h  ItemStack.h
src/Items/Buffs/: Buffs.h
src/Items/Inventory/: Inventory.cpp  Inventory.h
src/Items/ItemBase/: Item.h  ItemStack.h  ItemUseContext.h  ObjectToItem.h
src/Items/ItemRegister/: ItemRegister.cpp  ItemRegister.h  ItemRegisterAll.cpp  ItemRegisterAll.h
src/Items/resources/: ItemResources.cpp  ItemResources.h
src/Scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.h  SceneType.h  WorldCreationScene.cpp  WorldCreationScene.h  WorldSelectionScene.cpp  WorldSelectionScene.h
src/Utilities/Graphics/: Bar.cpp  Bar.h  Button.cpp  Button.h  TextBox.cpp  TextBox.h
src/Utilities/Logger/: Logger.h
src/Utilities/World/: Clamp.h  (+2 more)
src/World/: Chunk.h  ChunkSystem.h  World.cpp  World.h  WorldChanger.cpp  WorldChanger.h
(+18 files in other folders)
